Corrected Spring Boot practice: Add Category model