@@ -3,13 +3,13 @@ package mate.academy.spring.boot.service.impl;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import mate.academy.spring.boot.dto.category.CategoryDto;
+import mate.academy.spring.boot.dto.category.CategoryRequestDto;
 import mate.academy.spring.boot.mapper.CategoryMapper;
 import mate.academy.spring.boot.model.Category;
 import mate.academy.spring.boot.repository.category.CategoryRepository;
 import mate.academy.spring.boot.service.CategoryService;
 import org.springframework.stereotype.Service;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -21,38 +21,33 @@ public class CategoryServiceImpl implements CategoryService {
     public List<CategoryDto> findAll() {
         return categoryRepository.findAll().stream()
                 .map(categoryMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public CategoryDto getById(Long id) {
         return categoryRepository.findById(id)
                 .map(categoryMapper::toDto)
-                .orElseThrow(() -> new EntityNotFoundException("Category not found"));
+                .orElseThrow(() -> new EntityNotFoundException("No such a category with id: " + id));
     }
 
     @Override
-    public CategoryDto save(CategoryDto categoryDto) {
-        Category category = categoryMapper.toEntity(categoryDto);
+    public CategoryDto save(CategoryRequestDto categoryRequestDtoDto) {
+        Category category = categoryMapper.toEntity(categoryRequestDtoDto);
         category = categoryRepository.save(category);
         return categoryMapper.toDto(category);
     }
 
     @Override
-    public CategoryDto update(Long id, CategoryDto categoryDto) {
+    public CategoryDto update(Long id, CategoryRequestDto categoryRequestDto) {
         Category category = categoryRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Category not found"));
-        category.setName(categoryDto.getName());
-        category.setDescription(categoryDto.getDescription());
-        category = categoryRepository.save(category);
+                .orElseThrow(() -> new EntityNotFoundException("No such a category with id: " + id));
+        category = categoryMapper.updateCategoryFromDto(categoryRequestDto, category);
         return categoryMapper.toDto(category);
     }
 
     @Override
     public void deleteById(Long id) {
-        Category category = categoryRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Category not found"));
-        category.setDeleted(true);
-        categoryRepository.save(category);
+        categoryRepository.deleteById(id);
     }
 }
